--- a/testes.ipynb
+++ b/testes.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -88,7 +86,11 @@
     }
    ],
    "source": [
+    "# https://bitbucket.org/piedenis/lea/wiki/LeaPyTutorial1\n",
+    "# https://drive.google.com/file/d/0B1_ICcQCs7gebF9uVGdNdG1nR0E/view\n",
+    "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "data = [\n",
     "    ['a1', 'b1', 'c1', 1/8],\n",
@@ -108,9 +110,103 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "A   B   C \n",
+       "a1  b1  c1    0.125\n",
+       "        c2    0.125\n",
+       "    b2  c1    0.125\n",
+       "        c2    0.125\n",
+       "a2  b1  c1    0.125\n",
+       "        c2    0.125\n",
+       "    b2  c1    0.125\n",
+       "        c2    0.125\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df.groupby(['A', 'B', 'C']).sum()\n",
+    "print(type(df2))\n",
+    "series = df2.T.iloc[0]\n",
+    "series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "B   C \n",
+       "b1  c1    0.041667\n",
+       "    c2    0.041667\n",
+       "b2  c1    0.041667\n",
+       "    c2    0.041667\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series['a1'] / 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FrozenList(['Coin'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series = [\n",
+    "    1,\n",
+    "    0,\n",
+    "    0,\n",
+    "    1,\n",
+    "    1\n",
+    "]\n",
+    "\n",
+    "s = pd.Series(series, index=pd.Index(['head', 'tail', 'tail', 'head', 'head'], name='Coin'))\n",
+    "s.groupby(s.index).sum()\n",
+    "\n",
+    "i = s.index\n",
+    "i.names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -118,7 +214,7 @@
        "0.5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,10 +225,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">a1</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">b1</th>\n",
+       "      <th>c1</th>\n",
+       "      <td>0.125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c2</th>\n",
+       "      <td>0.125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">b2</th>\n",
+       "      <th>c1</th>\n",
+       "      <td>0.125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c2</th>\n",
+       "      <td>0.125</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          value\n",
+       "A  B  C        \n",
+       "a1 b1 c1  0.125\n",
+       "      c2  0.125\n",
+       "   b2 c1  0.125\n",
+       "      c2  0.125"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[:][df.A=='a1'].set_index(list(df.columns[0:-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -194,10 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -234,7 +392,7 @@
        "a2    0.5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,10 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -284,7 +440,7 @@
        "1  a2    0.5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,10 +455,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -310,7 +464,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,10 +475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -365,7 +517,7 @@
        "1  a1  b1  c2    0.5"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,17 +532,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-105-b22d23a62ad2>, line 28)",
+     "evalue": "invalid syntax (<ipython-input-12-b22d23a62ad2>, line 28)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-105-b22d23a62ad2>\"\u001b[0;36m, line \u001b[0;32m28\u001b[0m\n\u001b[0;31m    X xor Y\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-b22d23a62ad2>\"\u001b[0;36m, line \u001b[0;32m28\u001b[0m\n\u001b[0;31m    X xor Y\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -427,24 +577,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "Only 2-level MultiIndex are supported.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-114-e06abfbf31af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'a1'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'b1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_panel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/paulo/anaconda3/lib/python3.5/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mto_panel\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1222\u001b[0m         if (not isinstance(self.index, MultiIndex) or  # pragma: no cover\n\u001b[1;32m   1223\u001b[0m                 len(self.index.levels) != 2):\n\u001b[0;32m-> 1224\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Only 2-level MultiIndex are supported.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1225\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1226\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_unique\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: Only 2-level MultiIndex are supported."
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "d = df[(df.A=='a1') & (df.B=='b1')]\n",
     "d.to_panel()"
@@ -452,24 +587,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "default casa\n",
-      "default 3\n",
-      "default None\n",
-      "default casa\n",
-      "default 3\n",
-      "default None\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from typing import overload\n",
     "\n",
@@ -509,19 +629,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "@overload\n",
     "def utf8(value: None) -> None:\n",
@@ -541,22 +651,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['cat', 4], ['dog', 3]]"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "\n",
@@ -567,29 +664,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "A           a2\n",
-       "B           b2\n",
-       "C           c2\n",
-       "value    0.125\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df.keys()\n",
     "df.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    ['low',  'A', 0.07],\n",
+    "    ['low',  'B', 0.28],\n",
+    "    ['low',  'C', 0.35],\n",
+    "    ['high', 'A', 0.18],\n",
+    "    ['high', 'B', 0.09],\n",
+    "    ['high', 'C', 0.03],\n",
+    "]\n",
+    "\n",
+    "variables = ['Intelligence', 'Grade', 'probability']\n",
+    "i = pd.DataFrame(data, columns=variables)\n",
+    "i = i.set_index(keys=list(i.columns[:-1]))\n",
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i.groupby(\n",
+    "    [\n",
+    "        i.index.get_level_values('Intelligence'),\n",
+    "        i.index.get_level_values('Grade'),\n",
+    "    ]\n",
+    ").sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "5 < np.linspace(0, 20, 11) < 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0, 20, 11)\n",
+    "np.sum((5 < x) & (x < 15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrays = [['bar', 'bar', 'baz', 'baz', 'foo', 'foo', 'qux', 'qux'],\n",
+    "          ['one', 'two', 'one', 'two', 'one', 'two', 'one', 'two']]\n",
+    "\n",
+    "tuples = list(zip(*arrays))\n",
+    "tuples\n",
+    "\n",
+    "index = pd.MultiIndex.from_tuples(tuples, names=['first', 'second'])\n",
+    "index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = pd.Series(np.random.randn(8), index=index)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s['bar':'foo']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s['bar'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "c = Counter(a=4, b=2, c=0, d=-2)\n",
+    "list(c.elements())\n",
+    "c.fromkeys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [['head', 1],\n",
+    " ['tails', 1],\n",
+    " ['head', 1],\n",
+    " ['tails', 1],\n",
+    " ['head', 1],\n",
+    " ['tails', 1]]\n",
+    "\n",
+    "df = pd.DataFrame(data, columns=list(['Coin']) + ['probability'])\n",
+    "\n",
+    "df.groupby(list(df.columns[:-1])).sum().T.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.Series(['Paulo', 2], dtype=('U10', float))\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = np.dtype({\n",
+    "    'names': ('Coin', 'House', 'probability'),\n",
+    "    'formats': ('U2', 'U2', 'f')\n",
+    "})\n",
+    "\n",
+    "lista = [\n",
+    "    ['a', 'b', 3],\n",
+    "    ['a', 'c', 3],\n",
+    "    ['e', 'd', 3]\n",
+    "]\n",
+    "array = np.asarray([tuple(e) for e in lista], dtype=d)\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [\n",
+    "    ['a', 'b', 3],\n",
+    "    ['a', 'c', 3],\n",
+    "    ['e', 'd', 3]\n",
+    "]\n",
+    "array = np.asarray([tuple(e) for e in lista])\n",
+    "array[:, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = pd.Series(index=pd.Index([], name=['Coin', 'Die']))\n",
+    "s2 = pd.Series(['head', 3], index=pd.Index([], name=['Coin', 'Die']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = [\n",
+    "    ['head', 'tail', 'head'],\n",
+    "    ['two', 'three', 'four'],\n",
+    "]\n",
+    "\n",
+    "columns = list(zip(*columns))\n",
+    "\n",
+    "index = pd.MultiIndex.from_tuples(columns, names=['Coin', 'Die'])\n",
+    "#index = pd.Index(columns, name='Coin')\n",
+    "\n",
+    "pd.Series([2, 3, 4], index=index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = [\n",
+    "    'head'\n",
+    "    'tail'\n",
+    "]\n",
+    "\n",
+    "index = pd.MultiIndex.from_arrays(columns, names=['Coin'])\n",
+    "#index = pd.Index(columns, name='Coin')\n",
+    "\n",
+    "pd.Series([2, 3], index=index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "reduce(lambda a, b: print(a, b), [0,1,2], 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from probability.experiment import Occurrence, Experiment\n",
+    "\n",
+    "expected = [\n",
+    "    Occurrence('a1'),\n",
+    "    Occurrence('a1'),\n",
+    "    Occurrence('a2'),\n",
+    "    #Occurrence(['a1', 'b1', 'c1']),\n",
+    "    #Occurrence(['a1', 'b1', 'c2'], 3),\n",
+    "    #Occurrence(['a1', 'b2', 'c1']),\n",
+    "    #Occurrence(['a1', 'b2', 'c1']),\n",
+    "]\n",
+    "\n",
+    "#experiment = Experiment('A', 'B', 'C')\n",
+    "experiment = Experiment('A')\n",
+    "\n",
+    "for occurrence in expected:\n",
+    "    experiment.register(occurrence)\n",
+    "\n",
+    "series = experiment.to_series()\n",
+    "#series.index.groupby(series.index)\n",
+    "series\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#series.groupby(('A', 'B', 'C')).sum()\n",
+    "series.index.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series.groupby(level=series.index.names).sum()"
    ]
   },
   {
