Add empty topics Expectation and Variance

--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -878,6 +878,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Expectation\n",
+    "#### Variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Module 3 - Graphs"
    ]
   },
