Add Lista de exercicio 2. Add tratamento de pedalboard. Add Análise de plugins de áudio

--- a/projeto-final/Tratamento de dados 2 - Coletando dados dos pedalboards.ipynb
+++ b/projeto-final/Tratamento de dados 2 - Coletando dados dos pedalboards.ipynb
@@ -1,11 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tratamento de dados 1\n",
+    "\n",
+    "A partir de uma lista de pedalboards (`data/pedalboards-list.json`), tentaremos obter os pedalboards."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lista de pedalboards"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -77,11 +91,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Total de pedalboards na lista"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -99,11 +118,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Função para obter pedalboards\n",
+    "\n",
+    "É esperado que o pedalboard tenha o formato **XML**.\n",
+    "\n",
+    "Testaremos com o primeiro pedalboard da lista:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -230,11 +258,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extrair informações importantes do modelo de dados\n",
+    "\n",
+    "Inicialmente queremos somente o nome do pedalboard e o índice dos plugins de áudio utilizados neste pedalboard"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -260,10 +295,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Processar toda a lista de plugins\n",
+    "\n",
+    "Processamentos todos os pedalboards listados. \n",
+    "\n",
+    "O índice de pedalboards que deram erro a obtenção de seus dados será preservada (em `errors`). Alguns pedalboards estão em outros padrões de arquivos:\n",
+    " * _zip_ contendo um conjunto de pedalboards."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1084,9 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1107,7 +1151,6 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1131,7 +1174,6 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1264,74 +1306,6 @@
    ],
    "source": [
     "errors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>key</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0</td>\n",
-       "      <td>M-Filter</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>1</td>\n",
-       "      <td>TheVibe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Z-Organ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Slicer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>4</td>\n",
-       "      <td>PhaseDly</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     key      name\n",
-       "13     0  M-Filter\n",
-       "113    1   TheVibe\n",
-       "83     2   Z-Organ\n",
-       "61     3    Slicer\n",
-       "94     4  PhaseDly"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plugins = pd.read_json('data/plugins.json', orient='columns')\n",
-    "plugins.sort_values(by='key').head()"
    ]
   }
  ],
