Adicionado implementação com NLTK

--- a/Exercício 03 - 06.07/Análise dos dados - Optimized.ipynb
+++ b/Exercício 03 - 06.07/Análise dos dados - Optimized.ipynb
@@ -251,10 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def separar_treino_teste(proporcao):\n",
@@ -280,19 +278,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3    0.718783\n",
-       "2    0.178384\n",
-       "1    0.102833\n",
+       "3    0.722131\n",
+       "2    0.167213\n",
+       "1    0.110656\n",
        "Name: Sentiment, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -365,75 +363,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.042497</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000787</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.051639</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000820</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000262</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.076863</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000787</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.077869</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000820</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00082</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000787</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.298793</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000525</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.007608</td>\n",
-       "      <td>0.000525</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000262</td>\n",
+       "      <td>0.312295</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.007377</td>\n",
+       "      <td>0.00082</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.002623</td>\n",
-       "      <td>0.000787</td>\n",
-       "      <td>0.001049</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000787</td>\n",
-       "      <td>0.000525</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.001639</td>\n",
+       "      <td>0.00082</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00082</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00082</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -441,34 +439,28 @@
        "</div>"
       ],
       "text/plain": [
-       "                  a       aaa  aadithya       aap     abdul     abhay  \\\n",
-       "Sentiment                                                               \n",
-       "1          0.042497  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "2          0.076863  0.000000  0.000000  0.000000  0.000000  0.000262   \n",
-       "3          0.298793  0.000262  0.000525  0.000262  0.000262  0.000000   \n",
+       "                  a  aaa  aadithya  aap  abdul  abhay      able  abnormally  \\\n",
+       "Sentiment                                                                     \n",
+       "1          0.051639  0.0       0.0  0.0    0.0    0.0  0.000820     0.00000   \n",
+       "2          0.077869  0.0       0.0  0.0    0.0    0.0  0.000820     0.00000   \n",
+       "3          0.312295  0.0       0.0  0.0    0.0    0.0  0.007377     0.00082   \n",
        "\n",
-       "               able  abnormally  aboarding     abode    ...        yummy  \\\n",
-       "Sentiment                                               ...                \n",
-       "1          0.000787    0.000000   0.000000  0.000000    ...     0.000000   \n",
-       "2          0.000787    0.000000   0.000262  0.000000    ...     0.000000   \n",
-       "3          0.007608    0.000525   0.000000  0.000262    ...     0.002623   \n",
+       "           aboarding  abode ...      yummy      yyy    z     zama  zero  zinc  \\\n",
+       "Sentiment                   ...                                                 \n",
+       "1            0.00000    0.0 ...   0.000000  0.00000  0.0  0.00000   0.0   0.0   \n",
+       "2            0.00082    0.0 ...   0.000000  0.00000  0.0  0.00000   0.0   0.0   \n",
+       "3            0.00000    0.0 ...   0.001639  0.00082  0.0  0.00082   0.0   0.0   \n",
        "\n",
-       "                yyy         z      zama      zero      zinc    zodiac  \\\n",
-       "Sentiment                                                               \n",
-       "1          0.000000  0.000000  0.000000  0.000262  0.000000  0.000000   \n",
-       "2          0.000000  0.000000  0.000000  0.000262  0.000000  0.000000   \n",
-       "3          0.000787  0.001049  0.000262  0.000000  0.000262  0.000787   \n",
-       "\n",
-       "               zone     zones       zoo  \n",
-       "Sentiment                                \n",
-       "1          0.000000  0.000000  0.000262  \n",
-       "2          0.000000  0.000787  0.000000  \n",
-       "3          0.000525  0.000000  0.000000  \n",
+       "            zodiac  zone  zones  zoo  \n",
+       "Sentiment                             \n",
+       "1          0.00000   0.0    0.0  0.0  \n",
+       "2          0.00000   0.0    0.0  0.0  \n",
+       "3          0.00082   0.0    0.0  0.0  \n",
        "\n",
        "[3 rows x 6373 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
