--- a/projeto-final/Tratamento de dados 1 - Plugins de áudio.ipynb
+++ b/projeto-final/Tratamento de dados 1 - Plugins de áudio.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -109,7 +109,7 @@
        "9   CombFLTR  Filter_EQ"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "9  32   CombFLTR"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "[117 rows x 2 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,14 +678,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "#with open(, 'w') as outfile:\n",
-    "plugins.to_json('data/plugins.json')"
+    "plugins.to_csv('data/plugins_categories.csv')"
    ]
   }
  ],
